# clf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  setup.cfg  setup.py
clf/: AdvectionEquation.hpp  BasisFunctions.hpp  BasisFunctionsExceptions.hpp  BoundaryCondition.hpp  BurgersEquation.hpp  CLFException.hpp  CLFExceptions.hpp  CollocationCost.hpp  CollocationPoint.hpp  CollocationPointCloud.hpp  CollocationPointSampler.hpp  ColocationCost.hpp  ColocationPoint.hpp  ColocationPointCloud.hpp  ColocationPointSampler.hpp  ConservationLaw.hpp  ConservationLawWeakFormResidual.hpp  CostFunction.hpp  CoupledCost.hpp  CoupledLocalFunction.hpp  CoupledLocalFunctions.hpp  CoupledSupportPoint.hpp  DOFIndices.hpp  DenseCostFunction.hpp  DenseLevenbergMarquardt.hpp  DensePenaltyFunction.hpp  DenseQuadraticCostFunction.hpp  Domain.hpp  FeatureMatrix.hpp  FeatureVector.hpp  FiniteDifference.hpp  GlobalCost.hpp  Hypercube.hpp  IdentityModel.hpp  LaplaceOperator.hpp  LegendrePolynomials.hpp  LevenbergMarquardt.hpp  LinearDifferentialOperator.hpp  LinearModel.hpp  LinearSolver.hpp  (+39 more)
clf/python/: PySystemOfEquations.hpp  Pybind11Wrappers.hpp
cmake/: CLFConfig.cmake.in  FindDependencies.cmake
cmake/append/: AppendBOOST.cmake  AppendEIGEN3.cmake  AppendGTEST.cmake  AppendHDF5.cmake  AppendMUQ.cmake  AppendNLOPT.cmake
cmake/check/: CheckBOOST.cmake  CheckEIGEN3.cmake  CheckGTEST.cmake  CheckHDF5.cmake  CheckMUQ.cmake  CheckNLOPT.cmake
cmake/find/: FindBOOST.cmake  FindEIGEN3.cmake  FindGTEST.cmake  FindHDF5.cmake  FindMUQ.cmake  FindNLOPT.cmake
documentation/: clf.doxyfile.in
documentation/html/: BasisFunctionsExceptions_8cpp.html  BasisFunctionsExceptions_8hpp.html  BasisFunctionsExceptions_8hpp_source.html  BasisFunctionsTests_8cpp.html  BasisFunctionsTests_8py.html  BasisFunctions_8hpp.html  BasisFunctions_8hpp_source.html  Burgers_2cpp_2__plot-result_8py.html  Burgers_2cpp_2build_2CMakeCache_8txt.html  Burgers_2cpp_2build_2CMakeFiles_23_819_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  Burgers_2cpp_2build_2CMakeFiles_23_819_81_2CompilerIdC_2CMakeCCompilerId_8c.html  Burgers_2cpp_2build_2CMakeFiles_2TargetDirectories_8txt.html  Burgers_2cpp_2build_2CMakeFiles_2solve-Burgers_8dir_2link_8txt.html  CLFException_8cpp.html  CLFException_8hpp.html  CLFException_8hpp_source.html  CLF__PIP__INSTALL__LOG_8txt.html  CMakeLists_8txt.html  CollocationCostTests_8cpp.html  CollocationCost_8cpp.html  CollocationCost_8hpp.html  CollocationCost_8hpp_source.html  CollocationPointCloudTests_8cpp.html  CollocationPointCloud_8cpp.html  CollocationPointCloud_8hpp.html  CollocationPointCloud_8hpp_source.html  CollocationPointSamplerTests_8cpp.html  CollocationPointSampler_8cpp.html  CollocationPointSampler_8hpp.html  CollocationPointSampler_8hpp_source.html  CollocationPointTests_8cpp.html  CollocationPoint_8cpp.html  CollocationPoint_8hpp.html  CollocationPoint_8hpp_source.html  CostFunctionTests_8cpp.html  CostFunction_8hpp.html  CostFunction_8hpp_source.html  CoupledCostTests_8cpp.html  CoupledCost_8cpp.html  CoupledCost_8hpp.html  (+461 more)
examples/: _data-driven-CLF.ipynb
examples/advection/: Model.py  _multiple-polynomials-random.py
examples/data-driven-clf/1d-example/cpp/: CMakeLists.txt  _run-1d-example.cpp
examples/linear-model/: _multiple-polynomials-grid.py  (+3 more)
python/: AdvectionEquation.cpp  BasisFunctions.cpp  BurgersEquation.cpp  ConservationLaw.cpp  ConservationLawWeakFormResidual.cpp  CostFunction.cpp  CoupledLocalFunctions.cpp  CoupledSupportPoint.cpp  DenseCostFunction.cpp  DenseLevenbergMarquardt.cpp  DensePenaltyFunction.cpp  Domain.cpp  FeatureMatrix.cpp  FeatureVector.cpp  Hypercube.cpp  IdentityModel.cpp  LevenbergMarquardt.cpp  LinearModel.cpp  LocalFunction.cpp  LocalFunctions.cpp  LocalResidual.cpp  Model.cpp  Module.cpp  MultiIndex.cpp  MultiIndexSet.cpp  OrthogonalPolynomials.cpp  Parameters.cpp  PenaltyFunction.cpp  Point.cpp  PointCloud.cpp  Residual.cpp  SparseCostFunction.cpp  SparseLevenbergMarquardt.cpp  SparsePenaltyFunction.cpp  SupportPoint.cpp  SupportPointCloud.cpp  SystemOfEquations.cpp  __init__.py  test.py
src/: AdvectionEquation.cpp  BasisFunctions.cpp  BasisFunctionsExceptions.cpp  BoundaryCondition.cpp  BurgersEquation.cpp  CLFException.cpp  CLFExceptions.cpp  CollocationCost.cpp  CollocationPoint.cpp  CollocationPointCloud.cpp  CollocationPointSampler.cpp  ColocationCost.cpp  ColocationPoint.cpp  ColocationPointCloud.cpp  ColocationPointSampler.cpp  ConservationLaw.cpp  ConservationLawWeakFormResidual.cpp  CostFunction.cpp  CoupledCost.cpp  CoupledLocalFunction.cpp  CoupledLocalFunctions.cpp  CoupledSupportPoint.cpp  DOFIndices.cpp  DenseCostFunction.cpp  DenseLevenbergMarquardt.cpp  DensePenaltyFunction.cpp  DenseQuadraticCostFunction.cpp  Domain.cpp  FeatureMatrix.cpp  FeatureVector.cpp  FiniteDifference.cpp  GlobalCost.cpp  Hypercube.cpp  IdentityModel.cpp  LaplaceOperator.cpp  LegendrePolynomials.cpp  LevenbergMarquardt.cpp  LinearDifferentialOperator.cpp  LinearModel.cpp  LinearSystem.cpp  (+33 more)
tests/: AdvectionEquationTests.cpp  AdvectionEquationTests.py  BasisFunctionsTests.cpp  BasisFunctionsTests.py  BoundaryConditionTests.cpp  BurgersEquationTests.cpp  BurgersEquationTests.py  CollocationCostTests.cpp  CollocationPointCloudTests.cpp  CollocationPointSamplerTests.cpp  CollocationPointTests.cpp  ColocationCostTests.cpp  ColocationPointCloudTests.cpp  ColocationPointSamplerTests.cpp  ColocationPointTests.cpp  ConservationLawWeakFormResidualTests.cpp  ConservationLawWeakFormResidualTests.py  CostFunctionTests.cpp  CostFunctionTests.py  CoupledCostTests.cpp  CoupledLocalFunctionsTests.cpp  CoupledLocalFunctionsTests.py  CoupledSupportPointTests.cpp  DomainTests.cpp  FeatureMatrixTests.cpp  FeatureMatrixTests.py  FeatureVectorTests.cpp  FeatureVectorTests.py  GlobalCostTests.cpp  HypercubeTests.cpp  HypercubeTests.py  IdentityModelTests.cpp  IdentityModelTests.py  LaplaceOperatorTests.cpp  LevenbergMarquardtTests.cpp  LevenbergMarquardtTests.py  LinearDifferentialOperatorTests.cpp  LinearModelTests.cpp  LinearModelTests.py  LinearSolverTests.cpp  (+48 more)
(+147 files in other folders)
